y.output
Terminals unused in grammar

    '^'


State 7 conflicts: 5 shift/reduce


Grammar

    0 $accept: line $end

    1 line: assignment ';'
    2     | condition line '}'

    3 $@1: %empty

    4 line: condition line '}' $@1 condition_else line '}'
    5     | exp ';'
    6     | exit_command ';'
    7     | print exp ';'
    8     | line assignment ';'
    9     | line print exp ';'
   10     | line exp ';'
   11     | line exit_command ';'
   12     | line condition line '}'

   13 $@2: %empty

   14 line: line condition line '}' $@2 condition_else line '}'

   15 assignment: identifier '=' exp
   16           | identifier '+' '=' exp
   17           | identifier '-' '=' exp
   18           | identifier '*' '=' exp
   19           | identifier '/' '=' exp
   20           | identifier '%' '=' exp

   21 condition: IF exp '{'

   22 condition_else: ELSE '{'

   23 exp: term
   24    | '-' term
   25    | exp '+' exp
   26    | exp '-' exp
   27    | exp '*' exp
   28    | exp '/' exp
   29    | exp '>' exp
   30    | exp '<' exp
   31    | exp '%' exp
   32    | exp gteq exp
   33    | exp lteq exp
   34    | exp eq exp
   35    | exp neq exp
   36    | '(' exp ')'

   37 term: number
   38     | identifier
   39     | identifier increment
   40     | identifier decrement
   41     | increment identifier
   42     | decrement identifier


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 20 31
    '(' (40) 36
    ')' (41) 36
    '*' (42) 18 27
    '+' (43) 16 25
    '-' (45) 17 24 26
    '/' (47) 19 28
    ';' (59) 1 5 6 7 8 9 10 11
    '<' (60) 30
    '=' (61) 15 16 17 18 19 20
    '>' (62) 29
    '^' (94)
    '{' (123) 21 22
    '}' (125) 2 4 12 14
    error (256)
    print (258) 7 9
    IF <num> (259) 21
    ELSE (260) 22
    lteq (261) 33
    gteq (262) 32
    eq (263) 34
    neq (264) 35
    increment (265) 39 41
    decrement (266) 40 42
    exit_command (267) 6 11
    number <num> (268) 37
    identifier <id> (269) 15 16 17 18 19 20 38 39 40 41 42


Nonterminals, with rules where they appear

    $accept (29)
        on left: 0
    line <num> (30)
        on left: 1 2 4 5 6 7 8 9 10 11 12 14
        on right: 0 2 4 8 9 10 11 12 14
    $@1 (31)
        on left: 3
        on right: 4
    $@2 (32)
        on left: 13
        on right: 14
    assignment <id> (33)
        on left: 15 16 17 18 19 20
        on right: 1 8
    condition (34)
        on left: 21
        on right: 2 4 12 14
    condition_else (35)
        on left: 22
        on right: 4 14
    exp <num> (36)
        on left: 23 24 25 26 27 28 29 30 31 32 33 34 35 36
        on right: 5 7 9 10 15 16 17 18 19 20 21 25 26 27 28 29 30 31 32 33 34 35 36
    term <num> (37)
        on left: 37 38 39 40 41 42
        on right: 23 24


State 0

    0 $accept: . line $end

    print         shift, and go to state 1
    IF            shift, and go to state 2
    increment     shift, and go to state 3
    decrement     shift, and go to state 4
    exit_command  shift, and go to state 5
    number        shift, and go to state 6
    identifier    shift, and go to state 7
    '-'           shift, and go to state 8
    '('           shift, and go to state 9

    line        go to state 10
    assignment  go to state 11
    condition   go to state 12
    exp         go to state 13
    term        go to state 14


State 1

    7 line: print . exp ';'

    increment   shift, and go to state 3
    decrement   shift, and go to state 4
    number      shift, and go to state 6
    identifier  shift, and go to state 15
    '-'         shift, and go to state 8
    '('         shift, and go to state 9

    exp   go to state 16
    term  go to state 14


State 2

   21 condition: IF . exp '{'

    increment   shift, and go to state 3
    decrement   shift, and go to state 4
    number      shift, and go to state 6
    identifier  shift, and go to state 15
    '-'         shift, and go to state 8
    '('         shift, and go to state 9

    exp   go to state 17
    term  go to state 14


State 3

   41 term: increment . identifier

    identifier  shift, and go to state 18


State 4

   42 term: decrement . identifier

    identifier  shift, and go to state 19


State 5

    6 line: exit_command . ';'

    ';'  shift, and go to state 20


State 6

   37 term: number .

    $default  reduce using rule 37 (term)


State 7

   15 assignment: identifier . '=' exp
   16           | identifier . '+' '=' exp
   17           | identifier . '-' '=' exp
   18           | identifier . '*' '=' exp
   19           | identifier . '/' '=' exp
   20           | identifier . '%' '=' exp
   38 term: identifier .
   39     | identifier . increment
   40     | identifier . decrement

    increment  shift, and go to state 21
    decrement  shift, and go to state 22
    '='        shift, and go to state 23
    '+'        shift, and go to state 24
    '-'        shift, and go to state 25
    '*'        shift, and go to state 26
    '/'        shift, and go to state 27
    '%'        shift, and go to state 28

    '+'       [reduce using rule 38 (term)]
    '-'       [reduce using rule 38 (term)]
    '*'       [reduce using rule 38 (term)]
    '/'       [reduce using rule 38 (term)]
    '%'       [reduce using rule 38 (term)]
    $default  reduce using rule 38 (term)


State 8

   24 exp: '-' . term

    increment   shift, and go to state 3
    decrement   shift, and go to state 4
    number      shift, and go to state 6
    identifier  shift, and go to state 15

    term  go to state 29


State 9

   36 exp: '(' . exp ')'

    increment   shift, and go to state 3
    decrement   shift, and go to state 4
    number      shift, and go to state 6
    identifier  shift, and go to state 15
    '-'         shift, and go to state 8
    '('         shift, and go to state 9

    exp   go to state 30
    term  go to state 14


State 10

    0 $accept: line . $end
    8 line: line . assignment ';'
    9     | line . print exp ';'
   10     | line . exp ';'
   11     | line . exit_command ';'
   12     | line . condition line '}'
   14     | line . condition line '}' $@2 condition_else line '}'

    $end          shift, and go to state 31
    print         shift, and go to state 32
    IF            shift, and go to state 2
    increment     shift, and go to state 3
    decrement     shift, and go to state 4
    exit_command  shift, and go to state 33
    number        shift, and go to state 6
    identifier    shift, and go to state 7
    '-'           shift, and go to state 8
    '('           shift, and go to state 9

    assignment  go to state 34
    condition   go to state 35
    exp         go to state 36
    term        go to state 14


State 11

    1 line: assignment . ';'

    ';'  shift, and go to state 37


State 12

    2 line: condition . line '}'
    4     | condition . line '}' $@1 condition_else line '}'

    print         shift, and go to state 1
    IF            shift, and go to state 2
    increment     shift, and go to state 3
    decrement     shift, and go to state 4
    exit_command  shift, and go to state 5
    number        shift, and go to state 6
    identifier    shift, and go to state 7
    '-'           shift, and go to state 8
    '('           shift, and go to state 9

    line        go to state 38
    assignment  go to state 11
    condition   go to state 12
    exp         go to state 13
    term        go to state 14


State 13

    5 line: exp . ';'
   25 exp: exp . '+' exp
   26    | exp . '-' exp
   27    | exp . '*' exp
   28    | exp . '/' exp
   29    | exp . '>' exp
   30    | exp . '<' exp
   31    | exp . '%' exp
   32    | exp . gteq exp
   33    | exp . lteq exp
   34    | exp . eq exp
   35    | exp . neq exp

    lteq  shift, and go to state 39
    gteq  shift, and go to state 40
    eq    shift, and go to state 41
    neq   shift, and go to state 42
    '<'   shift, and go to state 43
    '>'   shift, and go to state 44
    '+'   shift, and go to state 45
    '-'   shift, and go to state 46
    '*'   shift, and go to state 47
    '/'   shift, and go to state 48
    '%'   shift, and go to state 49
    ';'   shift, and go to state 50


State 14

   23 exp: term .

    $default  reduce using rule 23 (exp)


State 15

   38 term: identifier .
   39     | identifier . increment
   40     | identifier . decrement

    increment  shift, and go to state 21
    decrement  shift, and go to state 22

    $default  reduce using rule 38 (term)


State 16

    7 line: print exp . ';'
   25 exp: exp . '+' exp
   26    | exp . '-' exp
   27    | exp . '*' exp
   28    | exp . '/' exp
   29    | exp . '>' exp
   30    | exp . '<' exp
   31    | exp . '%' exp
   32    | exp . gteq exp
   33    | exp . lteq exp
   34    | exp . eq exp
   35    | exp . neq exp

    lteq  shift, and go to state 39
    gteq  shift, and go to state 40
    eq    shift, and go to state 41
    neq   shift, and go to state 42
    '<'   shift, and go to state 43
    '>'   shift, and go to state 44
    '+'   shift, and go to state 45
    '-'   shift, and go to state 46
    '*'   shift, and go to state 47
    '/'   shift, and go to state 48
    '%'   shift, and go to state 49
    ';'   shift, and go to state 51


State 17

   21 condition: IF exp . '{'
   25 exp: exp . '+' exp
   26    | exp . '-' exp
   27    | exp . '*' exp
   28    | exp . '/' exp
   29    | exp . '>' exp
   30    | exp . '<' exp
   31    | exp . '%' exp
   32    | exp . gteq exp
   33    | exp . lteq exp
   34    | exp . eq exp
   35    | exp . neq exp

    lteq  shift, and go to state 39
    gteq  shift, and go to state 40
    eq    shift, and go to state 41
    neq   shift, and go to state 42
    '<'   shift, and go to state 43
    '>'   shift, and go to state 44
    '+'   shift, and go to state 45
    '-'   shift, and go to state 46
    '*'   shift, and go to state 47
    '/'   shift, and go to state 48
    '%'   shift, and go to state 49
    '{'   shift, and go to state 52


State 18

   41 term: increment identifier .

    $default  reduce using rule 41 (term)


State 19

   42 term: decrement identifier .

    $default  reduce using rule 42 (term)


State 20

    6 line: exit_command ';' .

    $default  reduce using rule 6 (line)


State 21

   39 term: identifier increment .

    $default  reduce using rule 39 (term)


State 22

   40 term: identifier decrement .

    $default  reduce using rule 40 (term)


State 23

   15 assignment: identifier '=' . exp

    increment   shift, and go to state 3
    decrement   shift, and go to state 4
    number      shift, and go to state 6
    identifier  shift, and go to state 15
    '-'         shift, and go to state 8
    '('         shift, and go to state 9

    exp   go to state 53
    term  go to state 14


State 24

   16 assignment: identifier '+' . '=' exp

    '='  shift, and go to state 54


State 25

   17 assignment: identifier '-' . '=' exp

    '='  shift, and go to state 55


State 26

   18 assignment: identifier '*' . '=' exp

    '='  shift, and go to state 56


State 27

   19 assignment: identifier '/' . '=' exp

    '='  shift, and go to state 57


State 28

   20 assignment: identifier '%' . '=' exp

    '='  shift, and go to state 58


State 29

   24 exp: '-' term .

    $default  reduce using rule 24 (exp)


State 30

   25 exp: exp . '+' exp
   26    | exp . '-' exp
   27    | exp . '*' exp
   28    | exp . '/' exp
   29    | exp . '>' exp
   30    | exp . '<' exp
   31    | exp . '%' exp
   32    | exp . gteq exp
   33    | exp . lteq exp
   34    | exp . eq exp
   35    | exp . neq exp
   36    | '(' exp . ')'

    lteq  shift, and go to state 39
    gteq  shift, and go to state 40
    eq    shift, and go to state 41
    neq   shift, and go to state 42
    '<'   shift, and go to state 43
    '>'   shift, and go to state 44
    '+'   shift, and go to state 45
    '-'   shift, and go to state 46
    '*'   shift, and go to state 47
    '/'   shift, and go to state 48
    '%'   shift, and go to state 49
    ')'   shift, and go to state 59


State 31

    0 $accept: line $end .

    $default  accept


State 32

    9 line: line print . exp ';'

    increment   shift, and go to state 3
    decrement   shift, and go to state 4
    number      shift, and go to state 6
    identifier  shift, and go to state 15
    '-'         shift, and go to state 8
    '('         shift, and go to state 9

    exp   go to state 60
    term  go to state 14


State 33

   11 line: line exit_command . ';'

    ';'  shift, and go to state 61


State 34

    8 line: line assignment . ';'

    ';'  shift, and go to state 62


State 35

   12 line: line condition . line '}'
   14     | line condition . line '}' $@2 condition_else line '}'

    print         shift, and go to state 1
    IF            shift, and go to state 2
    increment     shift, and go to state 3
    decrement     shift, and go to state 4
    exit_command  shift, and go to state 5
    number        shift, and go to state 6
    identifier    shift, and go to state 7
    '-'           shift, and go to state 8
    '('           shift, and go to state 9

    line        go to state 63
    assignment  go to state 11
    condition   go to state 12
    exp         go to state 13
    term        go to state 14


State 36

   10 line: line exp . ';'
   25 exp: exp . '+' exp
   26    | exp . '-' exp
   27    | exp . '*' exp
   28    | exp . '/' exp
   29    | exp . '>' exp
   30    | exp . '<' exp
   31    | exp . '%' exp
   32    | exp . gteq exp
   33    | exp . lteq exp
   34    | exp . eq exp
   35    | exp . neq exp

    lteq  shift, and go to state 39
    gteq  shift, and go to state 40
    eq    shift, and go to state 41
    neq   shift, and go to state 42
    '<'   shift, and go to state 43
    '>'   shift, and go to state 44
    '+'   shift, and go to state 45
    '-'   shift, and go to state 46
    '*'   shift, and go to state 47
    '/'   shift, and go to state 48
    '%'   shift, and go to state 49
    ';'   shift, and go to state 64


State 37

    1 line: assignment ';' .

    $default  reduce using rule 1 (line)


State 38

    2 line: condition line . '}'
    4     | condition line . '}' $@1 condition_else line '}'
    8     | line . assignment ';'
    9     | line . print exp ';'
   10     | line . exp ';'
   11     | line . exit_command ';'
   12     | line . condition line '}'
   14     | line . condition line '}' $@2 condition_else line '}'

    print         shift, and go to state 32
    IF            shift, and go to state 2
    increment     shift, and go to state 3
    decrement     shift, and go to state 4
    exit_command  shift, and go to state 33
    number        shift, and go to state 6
    identifier    shift, and go to state 7
    '-'           shift, and go to state 8
    '('           shift, and go to state 9
    '}'           shift, and go to state 65

    assignment  go to state 34
    condition   go to state 35
    exp         go to state 36
    term        go to state 14


State 39

   33 exp: exp lteq . exp

    increment   shift, and go to state 3
    decrement   shift, and go to state 4
    number      shift, and go to state 6
    identifier  shift, and go to state 15
    '-'         shift, and go to state 8
    '('         shift, and go to state 9

    exp   go to state 66
    term  go to state 14


State 40

   32 exp: exp gteq . exp

    increment   shift, and go to state 3
    decrement   shift, and go to state 4
    number      shift, and go to state 6
    identifier  shift, and go to state 15
    '-'         shift, and go to state 8
    '('         shift, and go to state 9

    exp   go to state 67
    term  go to state 14


State 41

   34 exp: exp eq . exp

    increment   shift, and go to state 3
    decrement   shift, and go to state 4
    number      shift, and go to state 6
    identifier  shift, and go to state 15
    '-'         shift, and go to state 8
    '('         shift, and go to state 9

    exp   go to state 68
    term  go to state 14


State 42

   35 exp: exp neq . exp

    increment   shift, and go to state 3
    decrement   shift, and go to state 4
    number      shift, and go to state 6
    identifier  shift, and go to state 15
    '-'         shift, and go to state 8
    '('         shift, and go to state 9

    exp   go to state 69
    term  go to state 14


State 43

   30 exp: exp '<' . exp

    increment   shift, and go to state 3
    decrement   shift, and go to state 4
    number      shift, and go to state 6
    identifier  shift, and go to state 15
    '-'         shift, and go to state 8
    '('         shift, and go to state 9

    exp   go to state 70
    term  go to state 14


State 44

   29 exp: exp '>' . exp

    increment   shift, and go to state 3
    decrement   shift, and go to state 4
    number      shift, and go to state 6
    identifier  shift, and go to state 15
    '-'         shift, and go to state 8
    '('         shift, and go to state 9

    exp   go to state 71
    term  go to state 14


State 45

   25 exp: exp '+' . exp

    increment   shift, and go to state 3
    decrement   shift, and go to state 4
    number      shift, and go to state 6
    identifier  shift, and go to state 15
    '-'         shift, and go to state 8
    '('         shift, and go to state 9

    exp   go to state 72
    term  go to state 14


State 46

   26 exp: exp '-' . exp

    increment   shift, and go to state 3
    decrement   shift, and go to state 4
    number      shift, and go to state 6
    identifier  shift, and go to state 15
    '-'         shift, and go to state 8
    '('         shift, and go to state 9

    exp   go to state 73
    term  go to state 14


State 47

   27 exp: exp '*' . exp

    increment   shift, and go to state 3
    decrement   shift, and go to state 4
    number      shift, and go to state 6
    identifier  shift, and go to state 15
    '-'         shift, and go to state 8
    '('         shift, and go to state 9

    exp   go to state 74
    term  go to state 14


State 48

   28 exp: exp '/' . exp

    increment   shift, and go to state 3
    decrement   shift, and go to state 4
    number      shift, and go to state 6
    identifier  shift, and go to state 15
    '-'         shift, and go to state 8
    '('         shift, and go to state 9

    exp   go to state 75
    term  go to state 14


State 49

   31 exp: exp '%' . exp

    increment   shift, and go to state 3
    decrement   shift, and go to state 4
    number      shift, and go to state 6
    identifier  shift, and go to state 15
    '-'         shift, and go to state 8
    '('         shift, and go to state 9

    exp   go to state 76
    term  go to state 14


State 50

    5 line: exp ';' .

    $default  reduce using rule 5 (line)


State 51

    7 line: print exp ';' .

    $default  reduce using rule 7 (line)


State 52

   21 condition: IF exp '{' .

    $default  reduce using rule 21 (condition)


State 53

   15 assignment: identifier '=' exp .
   25 exp: exp . '+' exp
   26    | exp . '-' exp
   27    | exp . '*' exp
   28    | exp . '/' exp
   29    | exp . '>' exp
   30    | exp . '<' exp
   31    | exp . '%' exp
   32    | exp . gteq exp
   33    | exp . lteq exp
   34    | exp . eq exp
   35    | exp . neq exp

    lteq  shift, and go to state 39
    gteq  shift, and go to state 40
    eq    shift, and go to state 41
    neq   shift, and go to state 42
    '<'   shift, and go to state 43
    '>'   shift, and go to state 44
    '+'   shift, and go to state 45
    '-'   shift, and go to state 46
    '*'   shift, and go to state 47
    '/'   shift, and go to state 48
    '%'   shift, and go to state 49

    $default  reduce using rule 15 (assignment)


State 54

   16 assignment: identifier '+' '=' . exp

    increment   shift, and go to state 3
    decrement   shift, and go to state 4
    number      shift, and go to state 6
    identifier  shift, and go to state 15
    '-'         shift, and go to state 8
    '('         shift, and go to state 9

    exp   go to state 77
    term  go to state 14


State 55

   17 assignment: identifier '-' '=' . exp

    increment   shift, and go to state 3
    decrement   shift, and go to state 4
    number      shift, and go to state 6
    identifier  shift, and go to state 15
    '-'         shift, and go to state 8
    '('         shift, and go to state 9

    exp   go to state 78
    term  go to state 14


State 56

   18 assignment: identifier '*' '=' . exp

    increment   shift, and go to state 3
    decrement   shift, and go to state 4
    number      shift, and go to state 6
    identifier  shift, and go to state 15
    '-'         shift, and go to state 8
    '('         shift, and go to state 9

    exp   go to state 79
    term  go to state 14


State 57

   19 assignment: identifier '/' '=' . exp

    increment   shift, and go to state 3
    decrement   shift, and go to state 4
    number      shift, and go to state 6
    identifier  shift, and go to state 15
    '-'         shift, and go to state 8
    '('         shift, and go to state 9

    exp   go to state 80
    term  go to state 14


State 58

   20 assignment: identifier '%' '=' . exp

    increment   shift, and go to state 3
    decrement   shift, and go to state 4
    number      shift, and go to state 6
    identifier  shift, and go to state 15
    '-'         shift, and go to state 8
    '('         shift, and go to state 9

    exp   go to state 81
    term  go to state 14


State 59

   36 exp: '(' exp ')' .

    $default  reduce using rule 36 (exp)


State 60

    9 line: line print exp . ';'
   25 exp: exp . '+' exp
   26    | exp . '-' exp
   27    | exp . '*' exp
   28    | exp . '/' exp
   29    | exp . '>' exp
   30    | exp . '<' exp
   31    | exp . '%' exp
   32    | exp . gteq exp
   33    | exp . lteq exp
   34    | exp . eq exp
   35    | exp . neq exp

    lteq  shift, and go to state 39
    gteq  shift, and go to state 40
    eq    shift, and go to state 41
    neq   shift, and go to state 42
    '<'   shift, and go to state 43
    '>'   shift, and go to state 44
    '+'   shift, and go to state 45
    '-'   shift, and go to state 46
    '*'   shift, and go to state 47
    '/'   shift, and go to state 48
    '%'   shift, and go to state 49
    ';'   shift, and go to state 82


State 61

   11 line: line exit_command ';' .

    $default  reduce using rule 11 (line)


State 62

    8 line: line assignment ';' .

    $default  reduce using rule 8 (line)


State 63

    8 line: line . assignment ';'
    9     | line . print exp ';'
   10     | line . exp ';'
   11     | line . exit_command ';'
   12     | line . condition line '}'
   12     | line condition line . '}'
   14     | line . condition line '}' $@2 condition_else line '}'
   14     | line condition line . '}' $@2 condition_else line '}'

    print         shift, and go to state 32
    IF            shift, and go to state 2
    increment     shift, and go to state 3
    decrement     shift, and go to state 4
    exit_command  shift, and go to state 33
    number        shift, and go to state 6
    identifier    shift, and go to state 7
    '-'           shift, and go to state 8
    '('           shift, and go to state 9
    '}'           shift, and go to state 83

    assignment  go to state 34
    condition   go to state 35
    exp         go to state 36
    term        go to state 14


State 64

   10 line: line exp ';' .

    $default  reduce using rule 10 (line)


State 65

    2 line: condition line '}' .
    4     | condition line '}' . $@1 condition_else line '}'

    ELSE      reduce using rule 3 ($@1)
    $default  reduce using rule 2 (line)

    $@1  go to state 84


State 66

   25 exp: exp . '+' exp
   26    | exp . '-' exp
   27    | exp . '*' exp
   28    | exp . '/' exp
   29    | exp . '>' exp
   30    | exp . '<' exp
   31    | exp . '%' exp
   32    | exp . gteq exp
   33    | exp . lteq exp
   33    | exp lteq exp .
   34    | exp . eq exp
   35    | exp . neq exp

    '+'  shift, and go to state 45
    '-'  shift, and go to state 46
    '*'  shift, and go to state 47
    '/'  shift, and go to state 48
    '%'  shift, and go to state 49

    $default  reduce using rule 33 (exp)


State 67

   25 exp: exp . '+' exp
   26    | exp . '-' exp
   27    | exp . '*' exp
   28    | exp . '/' exp
   29    | exp . '>' exp
   30    | exp . '<' exp
   31    | exp . '%' exp
   32    | exp . gteq exp
   32    | exp gteq exp .
   33    | exp . lteq exp
   34    | exp . eq exp
   35    | exp . neq exp

    '+'  shift, and go to state 45
    '-'  shift, and go to state 46
    '*'  shift, and go to state 47
    '/'  shift, and go to state 48
    '%'  shift, and go to state 49

    $default  reduce using rule 32 (exp)


State 68

   25 exp: exp . '+' exp
   26    | exp . '-' exp
   27    | exp . '*' exp
   28    | exp . '/' exp
   29    | exp . '>' exp
   30    | exp . '<' exp
   31    | exp . '%' exp
   32    | exp . gteq exp
   33    | exp . lteq exp
   34    | exp . eq exp
   34    | exp eq exp .
   35    | exp . neq exp

    '+'  shift, and go to state 45
    '-'  shift, and go to state 46
    '*'  shift, and go to state 47
    '/'  shift, and go to state 48
    '%'  shift, and go to state 49

    $default  reduce using rule 34 (exp)


State 69

   25 exp: exp . '+' exp
   26    | exp . '-' exp
   27    | exp . '*' exp
   28    | exp . '/' exp
   29    | exp . '>' exp
   30    | exp . '<' exp
   31    | exp . '%' exp
   32    | exp . gteq exp
   33    | exp . lteq exp
   34    | exp . eq exp
   35    | exp . neq exp
   35    | exp neq exp .

    '+'  shift, and go to state 45
    '-'  shift, and go to state 46
    '*'  shift, and go to state 47
    '/'  shift, and go to state 48
    '%'  shift, and go to state 49

    $default  reduce using rule 35 (exp)


State 70

   25 exp: exp . '+' exp
   26    | exp . '-' exp
   27    | exp . '*' exp
   28    | exp . '/' exp
   29    | exp . '>' exp
   30    | exp . '<' exp
   30    | exp '<' exp .
   31    | exp . '%' exp
   32    | exp . gteq exp
   33    | exp . lteq exp
   34    | exp . eq exp
   35    | exp . neq exp

    '+'  shift, and go to state 45
    '-'  shift, and go to state 46
    '*'  shift, and go to state 47
    '/'  shift, and go to state 48
    '%'  shift, and go to state 49

    $default  reduce using rule 30 (exp)


State 71

   25 exp: exp . '+' exp
   26    | exp . '-' exp
   27    | exp . '*' exp
   28    | exp . '/' exp
   29    | exp . '>' exp
   29    | exp '>' exp .
   30    | exp . '<' exp
   31    | exp . '%' exp
   32    | exp . gteq exp
   33    | exp . lteq exp
   34    | exp . eq exp
   35    | exp . neq exp

    '+'  shift, and go to state 45
    '-'  shift, and go to state 46
    '*'  shift, and go to state 47
    '/'  shift, and go to state 48
    '%'  shift, and go to state 49

    $default  reduce using rule 29 (exp)


State 72

   25 exp: exp . '+' exp
   25    | exp '+' exp .
   26    | exp . '-' exp
   27    | exp . '*' exp
   28    | exp . '/' exp
   29    | exp . '>' exp
   30    | exp . '<' exp
   31    | exp . '%' exp
   32    | exp . gteq exp
   33    | exp . lteq exp
   34    | exp . eq exp
   35    | exp . neq exp

    '*'  shift, and go to state 47
    '/'  shift, and go to state 48
    '%'  shift, and go to state 49

    $default  reduce using rule 25 (exp)


State 73

   25 exp: exp . '+' exp
   26    | exp . '-' exp
   26    | exp '-' exp .
   27    | exp . '*' exp
   28    | exp . '/' exp
   29    | exp . '>' exp
   30    | exp . '<' exp
   31    | exp . '%' exp
   32    | exp . gteq exp
   33    | exp . lteq exp
   34    | exp . eq exp
   35    | exp . neq exp

    '*'  shift, and go to state 47
    '/'  shift, and go to state 48
    '%'  shift, and go to state 49

    $default  reduce using rule 26 (exp)


State 74

   25 exp: exp . '+' exp
   26    | exp . '-' exp
   27    | exp . '*' exp
   27    | exp '*' exp .
   28    | exp . '/' exp
   29    | exp . '>' exp
   30    | exp . '<' exp
   31    | exp . '%' exp
   32    | exp . gteq exp
   33    | exp . lteq exp
   34    | exp . eq exp
   35    | exp . neq exp

    $default  reduce using rule 27 (exp)


State 75

   25 exp: exp . '+' exp
   26    | exp . '-' exp
   27    | exp . '*' exp
   28    | exp . '/' exp
   28    | exp '/' exp .
   29    | exp . '>' exp
   30    | exp . '<' exp
   31    | exp . '%' exp
   32    | exp . gteq exp
   33    | exp . lteq exp
   34    | exp . eq exp
   35    | exp . neq exp

    $default  reduce using rule 28 (exp)


State 76

   25 exp: exp . '+' exp
   26    | exp . '-' exp
   27    | exp . '*' exp
   28    | exp . '/' exp
   29    | exp . '>' exp
   30    | exp . '<' exp
   31    | exp . '%' exp
   31    | exp '%' exp .
   32    | exp . gteq exp
   33    | exp . lteq exp
   34    | exp . eq exp
   35    | exp . neq exp

    $default  reduce using rule 31 (exp)


State 77

   16 assignment: identifier '+' '=' exp .
   25 exp: exp . '+' exp
   26    | exp . '-' exp
   27    | exp . '*' exp
   28    | exp . '/' exp
   29    | exp . '>' exp
   30    | exp . '<' exp
   31    | exp . '%' exp
   32    | exp . gteq exp
   33    | exp . lteq exp
   34    | exp . eq exp
   35    | exp . neq exp

    lteq  shift, and go to state 39
    gteq  shift, and go to state 40
    eq    shift, and go to state 41
    neq   shift, and go to state 42
    '<'   shift, and go to state 43
    '>'   shift, and go to state 44
    '+'   shift, and go to state 45
    '-'   shift, and go to state 46
    '*'   shift, and go to state 47
    '/'   shift, and go to state 48
    '%'   shift, and go to state 49

    $default  reduce using rule 16 (assignment)


State 78

   17 assignment: identifier '-' '=' exp .
   25 exp: exp . '+' exp
   26    | exp . '-' exp
   27    | exp . '*' exp
   28    | exp . '/' exp
   29    | exp . '>' exp
   30    | exp . '<' exp
   31    | exp . '%' exp
   32    | exp . gteq exp
   33    | exp . lteq exp
   34    | exp . eq exp
   35    | exp . neq exp

    lteq  shift, and go to state 39
    gteq  shift, and go to state 40
    eq    shift, and go to state 41
    neq   shift, and go to state 42
    '<'   shift, and go to state 43
    '>'   shift, and go to state 44
    '+'   shift, and go to state 45
    '-'   shift, and go to state 46
    '*'   shift, and go to state 47
    '/'   shift, and go to state 48
    '%'   shift, and go to state 49

    $default  reduce using rule 17 (assignment)


State 79

   18 assignment: identifier '*' '=' exp .
   25 exp: exp . '+' exp
   26    | exp . '-' exp
   27    | exp . '*' exp
   28    | exp . '/' exp
   29    | exp . '>' exp
   30    | exp . '<' exp
   31    | exp . '%' exp
   32    | exp . gteq exp
   33    | exp . lteq exp
   34    | exp . eq exp
   35    | exp . neq exp

    lteq  shift, and go to state 39
    gteq  shift, and go to state 40
    eq    shift, and go to state 41
    neq   shift, and go to state 42
    '<'   shift, and go to state 43
    '>'   shift, and go to state 44
    '+'   shift, and go to state 45
    '-'   shift, and go to state 46
    '*'   shift, and go to state 47
    '/'   shift, and go to state 48
    '%'   shift, and go to state 49

    $default  reduce using rule 18 (assignment)


State 80

   19 assignment: identifier '/' '=' exp .
   25 exp: exp . '+' exp
   26    | exp . '-' exp
   27    | exp . '*' exp
   28    | exp . '/' exp
   29    | exp . '>' exp
   30    | exp . '<' exp
   31    | exp . '%' exp
   32    | exp . gteq exp
   33    | exp . lteq exp
   34    | exp . eq exp
   35    | exp . neq exp

    lteq  shift, and go to state 39
    gteq  shift, and go to state 40
    eq    shift, and go to state 41
    neq   shift, and go to state 42
    '<'   shift, and go to state 43
    '>'   shift, and go to state 44
    '+'   shift, and go to state 45
    '-'   shift, and go to state 46
    '*'   shift, and go to state 47
    '/'   shift, and go to state 48
    '%'   shift, and go to state 49

    $default  reduce using rule 19 (assignment)


State 81

   20 assignment: identifier '%' '=' exp .
   25 exp: exp . '+' exp
   26    | exp . '-' exp
   27    | exp . '*' exp
   28    | exp . '/' exp
   29    | exp . '>' exp
   30    | exp . '<' exp
   31    | exp . '%' exp
   32    | exp . gteq exp
   33    | exp . lteq exp
   34    | exp . eq exp
   35    | exp . neq exp

    lteq  shift, and go to state 39
    gteq  shift, and go to state 40
    eq    shift, and go to state 41
    neq   shift, and go to state 42
    '<'   shift, and go to state 43
    '>'   shift, and go to state 44
    '+'   shift, and go to state 45
    '-'   shift, and go to state 46
    '*'   shift, and go to state 47
    '/'   shift, and go to state 48
    '%'   shift, and go to state 49

    $default  reduce using rule 20 (assignment)


State 82

    9 line: line print exp ';' .

    $default  reduce using rule 9 (line)


State 83

   12 line: line condition line '}' .
   14     | line condition line '}' . $@2 condition_else line '}'

    ELSE      reduce using rule 13 ($@2)
    $default  reduce using rule 12 (line)

    $@2  go to state 85


State 84

    4 line: condition line '}' $@1 . condition_else line '}'

    ELSE  shift, and go to state 86

    condition_else  go to state 87


State 85

   14 line: line condition line '}' $@2 . condition_else line '}'

    ELSE  shift, and go to state 86

    condition_else  go to state 88


State 86

   22 condition_else: ELSE . '{'

    '{'  shift, and go to state 89


State 87

    4 line: condition line '}' $@1 condition_else . line '}'

    print         shift, and go to state 1
    IF            shift, and go to state 2
    increment     shift, and go to state 3
    decrement     shift, and go to state 4
    exit_command  shift, and go to state 5
    number        shift, and go to state 6
    identifier    shift, and go to state 7
    '-'           shift, and go to state 8
    '('           shift, and go to state 9

    line        go to state 90
    assignment  go to state 11
    condition   go to state 12
    exp         go to state 13
    term        go to state 14


State 88

   14 line: line condition line '}' $@2 condition_else . line '}'

    print         shift, and go to state 1
    IF            shift, and go to state 2
    increment     shift, and go to state 3
    decrement     shift, and go to state 4
    exit_command  shift, and go to state 5
    number        shift, and go to state 6
    identifier    shift, and go to state 7
    '-'           shift, and go to state 8
    '('           shift, and go to state 9

    line        go to state 91
    assignment  go to state 11
    condition   go to state 12
    exp         go to state 13
    term        go to state 14


State 89

   22 condition_else: ELSE '{' .

    $default  reduce using rule 22 (condition_else)


State 90

    4 line: condition line '}' $@1 condition_else line . '}'
    8     | line . assignment ';'
    9     | line . print exp ';'
   10     | line . exp ';'
   11     | line . exit_command ';'
   12     | line . condition line '}'
   14     | line . condition line '}' $@2 condition_else line '}'

    print         shift, and go to state 32
    IF            shift, and go to state 2
    increment     shift, and go to state 3
    decrement     shift, and go to state 4
    exit_command  shift, and go to state 33
    number        shift, and go to state 6
    identifier    shift, and go to state 7
    '-'           shift, and go to state 8
    '('           shift, and go to state 9
    '}'           shift, and go to state 92

    assignment  go to state 34
    condition   go to state 35
    exp         go to state 36
    term        go to state 14


State 91
